--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/892718'>Added test to verify [TreatNullAs=EmptyString] behavior of |mediaText|</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/883064'>Emit "input" event on activation behavior for radio and file &lt;input&gt; type</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/883005'>Introduce PluginParameters to HTMLPlugInElement and its subclass.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/890919'>[css-typed-om] rename CSSTranslation to CSSTranslate</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/891202'>[css-typed-om] value attribute should be readonly</a></td><td>Hwanseung Lee</td></tr>
