--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/893239'>[css-typed-om] rename attributeStyleMap to styleMap at CSSStyleRule</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/891304'>Fix null-dereference caused by r532302</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/890157'>[css-typed-om] rename CSSRotation to CSSRotate</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/892547'>Put CSS*TimingFunctionValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
