--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/826666'>Update the region lines property to latest spec</a></td><td>k2.nagaraju</td></tr>
 <tr><td>2018-01-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/893243'>Crash in CompositeEditCommand::InsertNodeBefore</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-01-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/895023'>Put CSSBasicShape*Value into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-01-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/893239'>[css-typed-om] rename attributeStyleMap to styleMap at CSSStyleRule</a></td><td>Hwanseung Lee</td></tr>
