--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/894864'>Revert "Migrate MediaStreamDispatcherHost to be per frame"</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2018-02-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/894864'>Migrate MediaStreamDispatcherHost to be per frame</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-02-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/896905'>Remove extra form data, if "value" attribute present with non-empty value</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-02-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/895026'>Directional code cleanup in editing module</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-02-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/826666'>Update the region lines property to latest spec</a></td><td>k2.nagaraju</td></tr>
