--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/896916'>IDL: Required [Exposed] to get rid of [PrimaryGlobal]</a></td><td>Pramod B S</td></tr>
 <tr><td>2018-02-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/894864'>Reland "Migrate MediaStreamDispatcherHost to be per frame"</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-02-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/896740'>Deprecate extra form data, if "value" attribute present with non-empty value</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-02-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/894864'>Revert "Migrate MediaStreamDispatcherHost to be per frame"</a></td><td>Chandan Padhi</td></tr>
