--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903204'>Put CSSFontVariationValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/899883'>[css-typed-om] Implement CSSSkewX</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-02-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/896734'>Fix dom_override_remove_cue_while_paused.html</a></td><td>Sriram</td></tr>
 <tr><td>2018-02-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/894968'>Make FontFace::InitCSSFontFace() takes |const CSSValue&amp;|.</a></td><td>Zhuoyu Qian</td></tr>
