--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903203'>Move FindStringAndScrollToVisible to TextFinder.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/896738'>Sync CSSImportRule, CSSMediaRule IDL as per the specification</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903303'>Move PerformDelete() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903204'>Put CSSFontVariationValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/899883'>[css-typed-om] Implement CSSSkewX</a></td><td>Hwanseung Lee</td></tr>
