--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903944'>Move Paste() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/900566'>Fixing names of password_manager kEnableManualFallbacksFilling feature.</a></td><td>nikhil</td></tr>
 <tr><td>2018-02-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903624'>Move SelectionStartCSSPropertyValue() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/905962'>Move ApplyStyleToSelection() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/904582'>[css-typed-om] update CSSUnparsedValue.idl</a></td><td>Hwanseung Lee</td></tr>
