--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903605'>Change GetImage() to be a const member function.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/904382'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-02-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/906174'>Move ApplyStyle() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/896917'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
