--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/886203'>Move {has_}device_pixel_ratio_header_value_ to ImageResourceContent</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903663'>Use proper node to split tree for outdent command.</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-02-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/910531'>Migrate RemoveFormattingAndStyle() into ExecuteRemoveFormat().</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/906049'>Change to use FindEventTargetFrom() instead of FindEventTargetFromSelection().</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/904086'>[css-typed-om] Implement CSSSkewY</a></td><td>Hwanseung Lee</td></tr>
