--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/908388'>Move TidyUpHTMLStructure() to EditingCommandsUtilities</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/907813'>Move WriteImageNodeToPasteboard to EditingUtilities.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/910752'>Migrate CanDHTML{Copy,Cut}() to Enabled{Copy,Cut}().</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/913049'>Expose SelectionHasStyle() as a static funtion of |EditingStyle|.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/913088'>Replace WTF_MAKE_NONCOPYABLE with DISALLOW_COPY_AND_ASSIGN in core/fetch/*</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/913189'>Fix for crash in formatBlock command</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-02-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/912055'>Adding myself to the core/html/track/OWNERS</a></td><td>Sriram</td></tr>
 <tr><td>2018-02-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903803'>Sync StyleSheet |media|, CSSPageRule |style| IDL attribute as per the spec</a></td><td>Bhagirathi Satpathy</td></tr>
