--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/913048'>Extract |RevealSelectionScope| out of |Editor|.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/915381'>Put CSSRayValue and CSSContentDistributionValue into blink::cssvalue.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/805675'>Migrate PeerConnection Tracker IPC to Mojo-part 1</a></td><td>mallikarjun82</td></tr>
 <tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/908388'>Move TidyUpHTMLStructure() to EditingCommandsUtilities</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/907813'>Move WriteImageNodeToPasteboard to EditingUtilities.</a></td><td>Zhuoyu Qian</td></tr>
