--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/908668'>Removed the product message from chrome://policy</a></td><td>Ganesh Borle</td></tr>
+<tr><td>2018-02-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/919021'>Changed std::find() to ContainsValue()/ContainsKey() in src/base/*</a></td><td>Ganesh Borle</td></tr>
 <tr><td>2018-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/899402'>Support MediaStreamTrack.getCapabilities() for echoCancellation and deviceId</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/910731'>DOMStorage: Use url::Origin rather than GURL for representing origins</a></td><td>Xunran Ding</td></tr>
 <tr><td>2018-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/913048'>Extract |RevealSelectionScope| out of |Editor|.</a></td><td>Zhuoyu Qian</td></tr>
