--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/924441'>[ChromeDriver] Make ChromeDriver more extensible on Android</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-02-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/921301'>Delete list item inside table deletes table.</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-02-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/908668'>Removed the product message from chrome://policy</a></td><td>Ganesh Borle</td></tr>
 <tr><td>2018-02-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/919021'>Changed std::find() to ContainsValue()/ContainsKey() in src/base/*</a></td><td>Ganesh Borle</td></tr>
