--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/923690'>Use [Replaceable] and remove custom setter for window event attribute</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2018-02-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/927937'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-02-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/911869'>Fix errorprone MissingOverride warnings</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-02-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/925783'>Changed std::find() to ContainsValue() in src/android_webview/*</a></td><td>Ganesh Borle</td></tr>
