--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934009'>Avoid setting document color attributes when it is a frameset</a></td><td>Ramya Vadlamudi</td></tr>
 <tr><td>2018-02-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/878421'>Empty bookmarks folder display message</a></td><td>Ayush Khandelwal</td></tr>
 <tr><td>2018-02-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/893238'>Canvas2d: Fix clusterfuzz crash</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-02-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/923690'>Use [Replaceable] and remove custom setter for window event attribute</a></td><td>Bhagirathi Satpathy</td></tr>
