--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/925203'>Add support for video properties in MediaStreamTrack.getCapabilities()</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-02-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/842426'>Convert ChromeViewMsg_AddSandboxStatusExtension to use mojo.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2018-02-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/929755'>Fix errorprone JavaLangClash warnings</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-02-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934009'>Avoid setting document color attributes when it is a frameset</a></td><td>Ramya Vadlamudi</td></tr>
