--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934382'>Move DeleteWithDirection() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/933666'>Remove TidyUpHTMLStructure() from Editor.h</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/933683'>Move PasteAsFragment() to EditorCommand.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/936941'>[css-typed-om] StylePropertyMapOnly.size changed to unsigned</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/925203'>Add support for video properties in MediaStreamTrack.getCapabilities()</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-02-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/842426'>Convert ChromeViewMsg_AddSandboxStatusExtension to use mojo.</a></td><td>cm.sanchi</td></tr>
