--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/933684'>Move FindEventTargetFrom() to EditingUtilities.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/933665'>Migrate PasteAsPlainText() to PasteAsPlainTextWithPasteboard() in EditorCommand</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934382'>Move DeleteWithDirection() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/933666'>Remove TidyUpHTMLStructure() from Editor.h</a></td><td>Zhuoyu Qian</td></tr>
