--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/938803'>[jumbo] rename variables name for jumbo build.</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-02-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934361'>Changed std::find() to ContainsValue() in src/ash/wm/*</a></td><td>Ganesh Borle</td></tr>
 <tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/933684'>Move FindEventTargetFrom() to EditingUtilities.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/933665'>Migrate PasteAsPlainText() to PasteAsPlainTextWithPasteboard() in EditorCommand</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934382'>Move DeleteWithDirection() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
