--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/940641'>Jumbo: Fix a build error</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/939209'>Move Some Functions of EditingUtilities to EditingCommandsUtilities.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/938884'>Put CSSUnsetValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/939881'>[css-typed-om] remove duplicate test.</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-02-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/914661'>PaymentHandler: Implement permission prompt when calling instruments.set</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-02-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/938803'>[jumbo] rename variables name for jumbo build.</a></td><td>Hwanseung Lee</td></tr>
