--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934481'>Support getCapabilities() for audio and video sources other than getUserMedia()</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/938983'>getCapabilities() should not have range properties without valid values</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/938888'>Move FirstRectForRange() to VisibleUnits.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/933741'>Migrate Copy(),Cut() to Execute{Copy,Cut}() in EditorCommand.</a></td><td>Zhuoyu Qian</td></tr>
