--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/940709'>Changed std::find() to ContainsValue() in src/ash/*</a></td><td>Ganesh Borle</td></tr>
+<tr><td>2018-03-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/940785'>Move DispatchClipboardEvent() to EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/903307'>Converts Android-specific cookie accesses to Mojo.</a></td><td>Pritam</td></tr>
 <tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934481'>Support getCapabilities() for audio and video sources other than getUserMedia()</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-02-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/938983'>getCapabilities() should not have range properties without valid values</a></td><td>Chandan Padhi</td></tr>
