--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945286'>Move CanSmartCopyOrDelete() to EditorCommand.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/930064'>Move *AppliedEditing() out of |Editor|.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945168'>Move FindEventTargetForClipboardEvent() to EditorCommand.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/938642'>Fix errorprone UseCorrectAssertInTests warnings</a></td><td>Rob Buis</td></tr>
