--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945350'>Move IsAmbiguousBoundaryCharacter() out of EditingUtilities.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945588'>Change EditorParagraphSeparator to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/942289'>CookiesFetcher cleanup.</a></td><td>Pritam</td></tr>
 <tr><td>2018-03-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/795524'>Port MediaStreamTrackMetrics IPC messages to mojo.</a></td><td>mck.giri</td></tr>
 <tr><td>2018-03-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/936506'>Replace WTF_MAKE_NONCOPYABLE with DISALLOW_COPY_AND_ASSIGN in platform/text/*</a></td><td>Yuhong Sha</td></tr>
