--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/939123'>[css-typed-om] computedStyleMap should be cached on Element</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945350'>Move IsAmbiguousBoundaryCharacter() out of EditingUtilities.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945588'>Change EditorParagraphSeparator to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/942289'>CookiesFetcher cleanup.</a></td><td>Pritam</td></tr>
