--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/942650'>Changed std::find() to ContainsValue() in src/base/*</a></td><td>Ganesh Borle</td></tr>
 <tr><td>2018-03-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/939882'>PaymentHandler: Disable permission prompt for payment handler</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/939123'>[css-typed-om] computedStyleMap should be cached on Element</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-03-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945350'>Move IsAmbiguousBoundaryCharacter() out of EditingUtilities.</a></td><td>Zhuoyu Qian</td></tr>
