--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/942589'>[Cleanup] Remove an outdated comment about opaque_bytes rename.</a></td><td>Yuhong Sha</td></tr>
 <tr><td>2018-03-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/949809'>Remove unused function from FrameCaret</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-03-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/950505'>Change EditorCommandSource to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/942650'>Changed std::find() to ContainsValue() in src/base/*</a></td><td>Ganesh Borle</td></tr>
