--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/951672'>Add typemapping for blink::mojom::FacingMode</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/942126'>Computed value for 'content' property is incorrect.</a></td><td>Ramya Vadlamudi</td></tr>
 <tr><td>2018-03-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/942589'>[Cleanup] Remove an outdated comment about opaque_bytes rename.</a></td><td>Yuhong Sha</td></tr>
 <tr><td>2018-03-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/949809'>Remove unused function from FrameCaret</a></td><td>tanvir.rizvi</td></tr>
