--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/942961'>Introduce InputDeviceInfo interface</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/954423'>Change PasteMode to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/953076'>Fix errorprone ArgumentSelectionDefectChecker warnings</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/951672'>Add typemapping for blink::mojom::FacingMode</a></td><td>Chandan Padhi</td></tr>
