--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/952744'>Introduce ClipboardCommands to split EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/954777'>Change DataTransferAccessPolicy to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/953181'>Fix errorprone NarrowingCompoundAssignment warnings</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/948122'>PaymentHandler: Add a permission check to GetAllPaymentApps()</a></td><td>Jinho Bang</td></tr>
