--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/957568'>ServiceWorker: Fix a jumbo build error</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-03-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945590'>Implement InputDeviceInfo.getCapabilities() for audio devices</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/954562'>Introduce canExecute() member function in |EditorInternalCommand|.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/952744'>Introduce ClipboardCommands to split EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
