--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/954164'>Replace CanExecuteWhenDisabled() with Can{Read/Write}Clipboard().</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/956652'>Use base::Optional instead of ImageView::image_size_set_</a></td><td>qi1988.yang</td></tr>
 <tr><td>2018-03-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/948802'>Added tests for FlushCookieStore API.</a></td><td>Pritam</td></tr>
 <tr><td>2018-03-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/957568'>ServiceWorker: Fix a jumbo build error</a></td><td>Jinho Bang</td></tr>
