--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/911609'>Fix errorprone ReferenceEquality warnings</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/961041'>Fix errorprone StaticGuardedByInstance warnings</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/956829'>Adding more UPI IDs to the regex and updated the unittest.</a></td><td>abhishek.a21</td></tr>
 <tr><td>2018-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/960701'>[css-typed-om] support break-after, break-before, break-inside</a></td><td>Hwanseung Lee</td></tr>
