--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/961765'>SetBackground{X/Y}Origin after BackgroundPosition{X/Y}::ApplyInherit SetPosition{X/Y}</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/952954'>Converts Android-specific cookie accesses to Mojo.</a></td><td>Pritam</td></tr>
 <tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/962562'>[css-typed-om] support some properties</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-03-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/911609'>Fix errorprone ReferenceEquality warnings</a></td><td>Rob Buis</td></tr>
