--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/950489'>Remove the trim operation for text node creation in xml tree.</a></td><td>Yuhong Sha</td></tr>
+<tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/956165'>Put CSSFontStyleRangeValue into the blink::cssvalue namespace.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/962989'>Accept comments as separators in rgba/hsla</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/964026'>Remove the dependence of Editor::Command in SelectionController.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/961765'>SetBackground{X/Y}Origin after BackgroundPosition{X/Y}::ApplyInherit SetPosition{X/Y}</a></td><td>Zhuoyu Qian</td></tr>
