--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/961778'>Restore UMA histograms for MediaDevices.enumerateDevices()</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/964381'>Make -webkit-app-region CSS implementation self-consistent</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/956383'>Implement InputDeviceInfo.getCapabilities() for video devices</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/950489'>Remove the trim operation for text node creation in xml tree.</a></td><td>Yuhong Sha</td></tr>
