--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/954773'>Introduce Editor::Command::CanExecute().</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-03-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/965723'>Change Editor:CreateCommand to be const type.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-03-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/965864'>Let Pasteboard::WriteHTML take |SmartReplaceOption| instead of |bool|.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-03-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/967902'>[css-typed-om] support some properties -2-</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-03-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/961778'>Restore UMA histograms for MediaDevices.enumerateDevices()</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/964381'>Make -webkit-app-region CSS implementation self-consistent</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/956383'>Implement InputDeviceInfo.getCapabilities() for video devices</a></td><td>Chandan Padhi</td></tr>
