--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/964034'>Remove the dependence of Editor::Command in WebLocalFrameImpl.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/968581'>[css-typed-om] support pointer-events property</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-03-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/934741'>PaymentHandler: Implement Content Settings UI for desktop</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-03-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/954773'>Introduce Editor::Command::CanExecute().</a></td><td>Zhuoyu Qian</td></tr>
