--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/970049'>Switch ntp_snippets enums to be enum class instead of plain c++ enum.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/967631'>Remove redundant null check in ApplyBlockElementCommand::DoApply()</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/958623'>Move Editor::Command to EditorCommand.h and rename to EditorCommand.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/948243'>Split ClipboardCommands static-only functions out of EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
