--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/965683'>Return boolean for the replace method in DOMTokenList</a></td><td>Yuhong Sha</td></tr>
 <tr><td>2018-03-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/970383'>Migrate //content/renderer/dom_storage to OnceCallback</a></td><td>Xunran Ding</td></tr>
 <tr><td>2018-03-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/968043'>Rename FeaturePolicy::Whitelist to "Allowlist"</a></td><td>qi1988.yang</td></tr>
 <tr><td>2018-03-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/945186'>Change PepperNetworkMonitorHost to use NetworkChangeObserver</a></td><td>Yuhong Sha</td></tr>
